name:                pidgeonclub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pidgeonclub#readme
license:             BSD3
license-file:        LICENSE
author:              Bernie Lau
maintainer:          bernie@tutanota.com
copyright:           2017 Bernie Lau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pidgeonclub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pidgeonclub
                     , aeson
                     , bytestring
                     , configurator
                     , http-types
                     , hvect
                     , lucid
                     , mtl
                     , network
                     , persistent
                     , path-pieces
                     , Spock
                     , Spock-core
                     , transformers
                     , text
                     , time
                     , unix-time
                     , wai
                     , wai-middleware-static
  default-language:    Haskell2010

test-suite pidgeonclub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pidgeonclub
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/bernielau/pidgeonclub
