name:                pidgeonclub
version:             0.1.0.0
synopsis:            The pidgeon.club webpage.
description:         Please see README.md
homepage:            https://bitbucket.com/bernielau/pidgeonclub
license:             BSD3
license-file:        LICENSE
author:              Bernie Lau
maintainer:          bernie@tutanota.com
copyright:           2017 Bernie Lau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable pidgeonclub
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , configurator
                     , cryptohash
                     , email-validate
                     , http-types
                     , hvect
                     , lucid
                     , monad-logger
                     , mtl
                     , network
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , pretty-simple
                     , path-pieces
                     , random
                     , resourcet
                     , Spock
                     , Spock-core
                     , transformers
                     , text
                     , time
                     , unix-time
                     , unordered-containers
                     , wai
                     , wai-middleware-static
                     , warp
                     , warp-tls
                     , word8
  other-modules:       PidgeonClub.Forms
                     , PidgeonClub.Views
                     , PidgeonClub.Types
                     , PidgeonClub.Actions
                     , PidgeonClub.Lorem
  default-language:    Haskell2010





source-repository head
  type:     git
  location: https://bitbucket.org/bernielau/pidgeonclub
